tests/conformance/syntax/positive/directed_hom_forms_valid.ditt
module Syntax.DirectedHomForms where

postulate C : Cat
refl_ascii (x : C) : x ->[C] x = refl x
refl_unicode (x : C) : x →[C] x = refl x
