tests/conformance/syntax/negative/refl_term_wrong_arity_invalid.ditt
module Syntax.ReflTermWrongArity where

postulate C : Cat

bad_refl (x : C) : x ->[C] x = refl x x
